@@ -2,9 +2,7 @@
 * Put the timeline editor at the top\bottom kinda like the sidebar?
 * File listing for path loading
 * Some visual indicator for when the camera is locked? ("CAMERA LOCKED")
-* Automatically store the current path in json. So paths won't be lost at crash. 
 * Path frame translate  (experimental)
 * Hotkey assignement tab (not high priority - might require some sdk additions)
-* Sidebar transition toggle by key instead of mouse?
 * 3D gizmo editor (not high priority - cinder?)
 * Graph editor (https://blenderartists.org/uploads/default/original/4X/3/7/a/37a98fe07c55038cd7daea9ba42e89feeafc6378.png) (not high priority)
